# albatross-simulator

./: Cargo.toml  LICENSE  README.md
config/: network-distributions.toml  protocol.toml  timing.toml
simulator/: Cargo.toml
simulator/examples/: ping_pong.rs
simulator/examples/example_metrics/: mod.rs
simulator/src/: environment.rs  event.rs  lib.rs  metrics.rs  network.rs  node.rs  simulator.rs  time.rs  timer.rs  unique_id.rs
src/: cmdline.rs  logging.rs  main.rs
src/actors/: honest.rs  mod.rs
src/datastructures/: block.rs  hash.rs  mod.rs  pbft.rs  signature.rs  slashing.rs  transaction.rs
src/distributions/: mod.rs  piecewise_constant.rs
src/protocol/: honest_protocol.rs  macro_block.rs  micro_block.rs  mod.rs
src/simulation/: metrics.rs  mod.rs  network.rs  settings.rs  topology_helper.rs
