[package]
name = "albatross-simulation"
version = "0.1.0"
authors = ["pb <mail@paberr.net>"]
edition = "2018"

[dependencies]
simulator = { path = "simulator" }
sha2 = "0.8"
log = "0.4"
num-bigint = "0.2"
num-traits = "0.2"
simple_logger = "1.0"
hex = "0.3"

#[dependencies.bls]
#git = "https://github.com/str4d/bls"
#version = "0.0.1"

[workspace]
members = ["simulator"]