[package]
name = "albatross-simulation"
version = "0.1.0"
authors = ["Pascal Berrang <mail@paberr.net>"]
edition = "2018"

[dependencies]
simulator = { path = "simulator" }
sha2 = "0.8"
log = "0.4"
num-bigint = "0.2"
num-traits = "0.2"
fern = { version = "0.5", features = ["colored"] }
hex = "0.3"
colored = "1.7"
rand = "0.6"
chrono = "0.4"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
clap = "2.33.0"
tokio = "0.1"
futures = "0.1"

#[dependencies.bls]
#git = "https://github.com/str4d/bls"
#version = "0.0.1"

[workspace]
members = ["simulator"]